<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_coins">

    <fragment
        android:id="@+id/navigation_coins"
        android:name="com.bsk.cointracker.ui.coinlist.CoinListFragment"
        android:label="@string/title_coins"
        tools:layout="@layout/fragment_coins">
        <action
            android:id="@+id/action_navigation_coins_to_coinDetailFragment"
            app:destination="@id/coinDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite_coins"
        android:name="com.bsk.cointracker.ui.favoritecoins.FavoriteCoinsFragment"
        android:label="@string/title_favorite_coins"
        tools:layout="@layout/fragment_favorite_coins" />

    <fragment
        android:id="@+id/coinDetailFragment"
        android:name="com.bsk.cointracker.ui.coinldetail.CoinDetailFragment"
        android:label="@string/title_coin_detail"
        tools:layout="@layout/fragment_coin_detail">

        <argument
            android:name="coinId"
            app:nullable="false"
            app:argType="string" />
    </fragment>
</navigation>