<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="coin"
            type="com.bsk.cointracker.data.remote.entities.Coin" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <soup.neumorphism.NeumorphFloatingActionButton
                        android:id="@+id/img_back"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="0"
                        android:contentDescription="@string/desc_back_image"
                        android:scaleType="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <soup.neumorphism.NeumorphCardView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                            app:neumorph_shapeType="flat">

                            <soup.neumorphism.NeumorphImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="2dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/desc_coin_image"
                                android:scaleType="fitCenter"
                                app:circularCrop="@{true}"
                                app:imageUrl="@{coin.largeImage}"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHeight_percent="0.2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                                app:neumorph_shapeType="flat"
                                tools:src="@tools:sample/backgrounds/scenic" />
                        </soup.neumorphism.NeumorphCardView>
                    </FrameLayout>

                    <soup.neumorphism.NeumorphFloatingActionButton
                        android:id="@+id/img_favorite"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="0"
                        android:contentDescription="@string/desc_back_image"
                        android:scaleType="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_favorite" />
                </LinearLayout>

                <soup.neumorphism.NeumorphTextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{coin.price + ` TRY`}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:visibility='@{coin.price == null || coin.price == "" ? View.GONE : View.VISIBLE}'
                    tools:text="0.00012 USD" />

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:neumorph_shapeType="pressed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp">

                        <TextView
                            android:id="@+id/tv_timer_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="12dp"
                            android:gravity="center"
                            android:text="@string/message_timer_off"
                            app:drawableStartCompat="@drawable/ic_timer" />

                        <EditText
                            android:id="@+id/edt_timer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="12dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:inputType="number"
                            android:padding="14dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <soup.neumorphism.NeumorphCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:visibility="@{coin.marketData.priceChangePercentage24H == null ? View.GONE : View.VISIBLE}"
                        app:neumorph_shapeType="flat">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingHorizontal="8dp"
                                android:text="Price change for 24h"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingHorizontal="8dp"
                                android:text="@{coin.marketData.priceChangePercentage24H + ` %`}"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView"
                                tools:text="12 %" />
                        </LinearLayout>
                    </soup.neumorphism.NeumorphCardView>

                    <soup.neumorphism.NeumorphCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:visibility="@{coin.hashingAlgorithm == null ? View.GONE : View.VISIBLE}"
                        app:neumorph_shapeType="flat">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="6dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingHorizontal="8dp"
                                android:text="Hashing algorithm"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingHorizontal="8dp"
                                android:text="@{coin.hashingAlgorithm}"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView"
                                tools:text="NeoScrypt" />
                        </LinearLayout>
                    </soup.neumorphism.NeumorphCardView>
                </LinearLayout>

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="16dp"
                            android:text="Description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@{coin.desc == null ? @string/message_coin_desc : coin.desc}"
                            android:textSize="@dimen/txt_coin_description"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            tools:text="@string/message_coin_desc" />
                    </LinearLayout>
                </soup.neumorphism.NeumorphCardView>
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </FrameLayout>
</layout>